# docs/swagger.json
@@ -340,6 +340,60 @@
             }
           }
         }
+      },
+      "post": {
+        "summary": "Create a new user",
+        "description": "Add a new user in database",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": { "type": "string", "example": "Solidarity Aid2" },
+                  "email": {
+                    "type": "string",
+                    "example": "contact@solidarityaid2.org"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "hashedpassword8"
+                  },
+                  "user_role": { "type": "string", "example": "association" }
+                },
+                "required": ["name", "email", "password", "user_role"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created with success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "integer", "example": 6 },
+                    "name": {
+                      "type": "string",
+                      "example": "Solidarity Aid2"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "contact@solidarityaid2.org"
+                    },
+                    "user_role": { "type": "string", "example": "association" }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     },
     "/users/{id}": {
