# repositories/usersRepository.js
@@ -30,13 +30,49 @@ class UsersRepository {
     let connexion;
     try {
       connexion = await this.pool.getConnection();
-      const user = await connexion.query("SELECT * FROM users WHERE id = ?", [
-        id,
-      ]);
-      console.log(user);
-      return user;
+      return await connexion.query("SELECT * FROM users WHERE id = ?", [id]);
     } catch (error) {
       const message = `Error in getUserById repository: ${error.message}`;
+      console.error(message);
+      throw new Error(message);
+    } finally {
+      if (connexion) connexion.release();
+    }
+  }
+
+  async getUserByEmail(email) {
+    let connexion;
+    try {
+      connexion = await this.pool.getConnection();
+      const result = await connexion.query(
+        "SELECT * FROM users WHERE email= ?",
+        [email]
+      );
+      return result[0];
+    } catch (error) {
+      const message = `Error in getUserByEmailrepository: ${error.message}`;
+      console.error(message);
+      throw new Error(message);
+    } finally {
+      if (connexion) connexion.release();
+    }
+  }
+
+  async createUser(name, email, hashedPassword, user_role) {
+    let connexion;
+    try {
+      connexion = await this.pool.getConnection();
+      await connexion.query(
+        "INSERT INTO users (name, email, password,user_role) VALUES (?,?,?,?)",
+        [name, email, hashedPassword, user_role]
+      );
+      return {
+        name,
+        email,
+        user_role,
+      };
+    } catch (error) {
+      const message = `Error in createUser repository: ${error.message}`;
       console.error(message);
       throw new Error(message);
     } finally {
